--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,9 @@ dependencies = [
     "flask>=3.0.0",
     "pillow>=10.0.0",
     "numpy>=1.24.0",
-    "werkzeug>=3.0.0"
+    "werkzeug>=3.0.0",
+    "google-genai",
+    "python-dotenv>=1.0.0",
+    "openai>=1.0.0",
+    "requests>=2.31.0"
 ]
