--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - FLASK_APP=main.py
       - PYTHONPATH=/app
       - GEMINI_API_KEY=${GEMINI_API_KEY}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
     volumes:
       # Mount for development (optional - comment out for production)
       # - ./templates:/app/templates:ro
